--- a/index.html
+++ b/index.html
@@ -28,14 +28,14 @@
           Web Development 👨🏻‍💻
         </h2>
         <div class="p">
-          <p>I'm a Web Developer and I love it. I'm currently working on a project called <a href="https://www.instagram.ante.adc">Ante.Adc</a> which is a website where I share my knowledge about Web Development and Photography.</p>
+          <p>I'm a Web Developer and I love it. I'm currently working on a project called <a href="https://www.instagram.com/ante.adc">Ante.Adc</a> which is a website where I share my knowledge about Web Development and Photography.</p>
         </div>
       </div>
 
       <div class="card">
         <h2>Photography 📷 </h2>
           <div class="p">
-            <p>I love photography and I'm currently working on a project called <a href="https://www.instagram.ante.adc">Ante.Adc</a> where I share my knowledge about Web Development and Photography.</p>
+            <p>I love photography and I'm currently working on a project called <a href="https://www.instagram.com/ante.adc">Ante.Adc</a> where I share my knowledge about Web Development and Photography.</p>
           </div>
       </div>
 
@@ -45,21 +45,21 @@
           <li>
             <div class="square">
               <img src="images/image1.jpg"></br></br>
-              <a href="https://www.instagram.ante.adc">Space</a>
+              <a href="https://www.instagram.com/ante.adc">Space</a>
             </div>
           </li>
 
           <li>
             <div class="square">
               <img src="images/image4.jpg"></br></br>
-              <a href="https://www.instagram.ante.adc">Infinity</a>
+              <a href="https://www.instagram.com/ante.adc">Infinity</a>
             </div>
           </li>
 
           <li>
             <div class="square">
               <img src="images/image3.jpg"></br></br>
-              <a href="https://www.instagram.ante.adc">Universal</a>
+              <a href="https://www.instagram.com/ante.adc">Universal</a>
             </div>
           </li>
         </ul>
@@ -111,7 +111,7 @@
             <a href="https://www.twitter.com/ante.adc"><i class="fa-brands fa-twitter"></i></a>
           </li>
           <li>
-            <a href="https://www.instagram.com/ante.adc"><i class="fa-brands fa-instagram"></i></a>
+            <a href="https://www.instagram.com/com/ante.adc"><i class="fa-brands fa-instagram.com/></i></a>
           </li>
           <li>
             <a href="https://www.linkedin.com/in/ante-andrijasevic-732328137/"><i class="fa-brands fa-linkedin-in"></i></a>
