--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
             <a href="https://www.twitter.com/ante.adc"><i class="fa-brands fa-twitter"></i></a>
           </li>
           <li>
-            <a href="https://www.instagram.com/com/ante.adc"><i class="fa-brands fa-instagram.com/></i></a>
+            <a href="https://www.instagram.com/com/ante.adc"><i class="fa-brands fa-instagram.com/"></i></a>
           </li>
           <li>
             <a href="https://www.linkedin.com/in/ante-andrijasevic-732328137/"><i class="fa-brands fa-linkedin-in"></i></a>
