--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <div class="card">
         <img src="images/ante.jpg" alt="Ante's face" width="200" height="200" class="profile-pic">
         <h1>
-          Hello I'm Ante 🥸
+          Hello I'm Ante 😊
         </h1>
 
         <h2>
@@ -28,7 +28,7 @@
           Web Development 👨🏻‍💻
         </h2>
         <div class="p">
-          <p>I'm a Web Developer and I love it. I'm currently working on a project called <a href="https://www.instagram.com/ante.adc">Ante.Adc</a> which is a website where I share my knowledge about Web Development and Photography.</p>
+          <p>Hey there! I'm a junior front-end developer who loves building beautiful and user-friendly websites. I'm fluent in HTML, CSS, and JavaScript and have back-end knowledge that i'm improving daily thanks to online courses. I have experience creating responsive and dynamic web pages and love collaborating with others to come up with creative solutions. As someone who loves to solve problems, I'm committed to creating engaging user experiences that meet both user and business needs. Let's connect and chat about all things web development!</p>
         </div>
       </div>
 
@@ -108,7 +108,7 @@
         <h2>My Socials</h2>
         <ul class="socials">
           <li>
-            <a href="https://www.twitter.com/ante.adc"><i class="fa-brands fa-twitter"></i></a>
+            <a href="https://twitter.com/AnteAdc"><i class="fa-brands fa-twitter"></i></a>
           </li>
           <li>
             <a href="https://www.instagram.com/com/ante.adc"><i class="fa-brands fa-instagram.com/"></i></a>
