--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <div class="card">
         <img src="images/ante.jpg" alt="Ante's face" width="200" height="200" class="profile-pic">
         <h1>
-          Hello I'm Ante 🥸
+          Hello I'm Ante 😊
         </h1>
 
         <h2>
