--- a/index.html
+++ b/index.html
@@ -13,58 +13,81 @@
 <body>
     <div class="container">
       <div class="card">
-        <img src="images/ante.jpg" alt="Ante's face" width="200" height="200" class="profile-pic">
+        <img src="images/1680049407962.jpeg" alt="Ante's face" width="200" height="200" class="profile-pic">
         <h1>
-          Hello I'm Ante 😊
+          Hi, I'm Ante 😊
         </h1>
 
         <h2>
-          I am a Web Developer and Photographer from Croatia 🇭🇷
+          I am a FullStack Web Developer and Photographer from Croatia 🇭🇷 </br>
         </h2>
-    </div>
+      </div>
+
+      <div class="card">
+        <h2>
+          About me
+        </h2>
+        <div class="p">
+          <p>I was born in Croatia and moved to France when I was 7. After studying Graphic and Web Design in Supcréa, Grenoble (FR) and doing a few web design internships <a href="https://www.procab.ch/">[Procab Studio]</a> I worked at <a href="https://www.chatillonarchitectes.com/en/">Francois Chatillon Architectes</a>
+            for 2.5 years, creating 3D renders for their impressive projects. I then spent 3 years travelling around Australia during the pandemic.
+          All these experiences let me explore various jobs, meet a lot of wonderful people and help me realize I needed to have a more technical challenge on top of my passion for photography:
+         this is why i decided to join the <a href="https://www.lewagon.com/"> Le Wagon's 9-week Developer Bootcamp</a> in Bali, and it was one of my best decisions! 🏝️</p>
+        </div>
+      </div>
 
       <div class="card">
         <h2>
           Web Development 👨🏻‍💻
         </h2>
         <div class="p">
-          <p>I'm a Web Developer and I love it. I'm currently working on a project called <a href="https://www.instagram.anteadc">Ante.Adc</a> which is a website where I share my knowledge about Web Development and Photography.</p>
+          <p>I'm a Web Developer obssessed with pixel-perfect interfaces and seamless user experiences</p>
         </div>
       </div>
 
       <div class="card">
-        <h2>Photography 📷 </h2>
-          <div class="p">
-            <p>I love photography and I'm currently working on a project called <a href="https://www.instagram.anteadc">Ante.Adc</a> where I share my knowledge about Web Development and Photography.</p>
-          </div>
-      </div>
-
-      <div class="card">
-        <h2>My Projects 📚 </h2>
+        <h2>My Web Projects ⌨️ </h2>
         <ul class="projects">
           <li>
             <div class="square">
               <img src="images/image1.jpg"></br></br>
-              <a href="https://www.instagram.anteadc">Space</a>
+              <a href="https://www.virtual-styler.me">Virtual Styler</a>
             </div>
           </li>
 
           <li>
             <div class="square">
               <img src="images/image4.jpg"></br></br>
-              <a href="https://www.instagram.anteadc">Infinity</a>
+              <a href="#">Space Trip</a>
             </div>
           </li>
 
           <li>
             <div class="square">
               <img src="images/image3.jpg"></br></br>
-              <a href="https://www.instagram.anteadc">Universal</a>
+              <a href="#">Universal</a>
+            </div>
+          </li>
+          <li>
+            <div class="square">
+              <img src="images/image1.jpg"></br></br>
+              <a href="#">Virtual Styler</a>
+            </div>
+          </li>
+
+          <li>
+            <div class="square">
+              <img src="images/image4.jpg"></br></br>
+              <a href="#">Space Trip</a>
+            </div>
+          </li>
+
+          <li>
+            <div class="square">
+              <img src="images/image3.jpg"></br></br>
+              <a href="#">Universal</a>
             </div>
           </li>
         </ul>
-        <button class="custom-btn btn-1">View More</button>
-
       </div>
 
       <div class="card skills">
@@ -95,14 +118,44 @@
       </div>
 
       <div class="card">
+        <h2>Photography 📷 </h2>
+          <div class="p">
+            <p>I'm passionate about photography and videography and you can follow my journey <a href="https://www.instagram.anteadc">@ante.adc</a></p>
+          </div>
+      </div>
+
+      <div class="card">
           <h2>My Hobbies</h2>
           <ul>
-            <li>Web Development </li>
-            <li>Photography</li>
-            <li>Movies</li>
+            <li>Web Development 👨🏻‍💻</li>
+            <li>Photography 📸</li>
+            <li>Exhibitions 🖼️</li>
+            <li>Fitness 🏋🏻</li>
           </ul>
       </div>
 
+      <div class="card">
+        <h2>Get in Touch!</h2>
+          <form
+          action="https://formspree.io/f/xjvdpgve"
+          method="POST"
+          class="contact-form"
+        >
+        <div class="form-labels">
+          <label>
+            Your email: <br>
+            <input type="email" name="email" class="label-email">
+          </label>
+          <label>
+            Your message: <br>
+            <textarea name="message" class="label-message"></textarea>
+          </label>
+          <!-- your other form fields go here -->
+        </div>
+          <button type="submit">Send</button>
+        </form>
+        <p>I will get back to you soon ☺️ </p>
+      </div>
 
       <div class="card">
         <h2>My Socials</h2>
@@ -114,11 +167,10 @@
             <a href="https://www.instagram.com/anteadc"><i class="fa-brands fa-instagram"></i></a>
           </li>
           <li>
-            <a href="https://www.linkedin.com/in/ante-andrijasevic-732328137/"><i class="fa-brands fa-linkedin-in"></i></a>
+            <a href="https://www.linkedin.com/in/anteadc"><i class="fa-brands fa-linkedin-in"></i></a>
           </li>
         </ul>
       </div>
-
     </div>
 
 </body>
