--- a/index.html
+++ b/index.html
@@ -49,42 +49,53 @@
         <ul class="projects">
           <li>
             <div class="square">
-              <img src="images/image1.jpg"></br></br>
-              <a href="https://www.virtual-styler.me">Virtual Styler</a>
+              <a href="https://www.virtual-styler.me">
+                <img src="images/image1.jpg"></br></br>
+                Virtual Styler</a>
             </div>
           </li>
 
           <li>
             <div class="square">
-              <img src="images/image4.jpg"></br></br>
-              <a href="#">Space Trip</a>
+              <a href="#">
+                <img src="images/image4.jpg"></br></br>
+                Space Trip
+              </a>
             </div>
           </li>
 
           <li>
             <div class="square">
-              <img src="images/image3.jpg"></br></br>
-              <a href="#">Universal</a>
+              <a href="#">
+                <img src="images/image3.jpg"></br></br>
+                Universal
+              </a>
             </div>
           </li>
           <li>
             <div class="square">
-              <img src="images/image1.jpg"></br></br>
-              <a href="#">Virtual Styler</a>
-            </div>
-          </li>
-
-          <li>
-            <div class="square">
-              <img src="images/image4.jpg"></br></br>
-              <a href="#">Space Trip</a>
+              <a href="#">
+                <img src="images/image1.jpg"></br></br>
+                Virtual Styer
+              </a>
             </div>
           </li>
 
           <li>
             <div class="square">
-              <img src="images/image3.jpg"></br></br>
-              <a href="#">Universal</a>
+              <a href="#">
+                <img src="images/image4.jpg"></br></br>
+                Space Trip
+              </a>
+            </div>
+          </li>
+
+          <li>
+            <div class="square">
+              <a href="#">
+                <img src="images/image3.jpg"></br></br>
+                Universal
+              </a>
             </div>
           </li>
         </ul>
