--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
           <li>
             <div class="square">
-              <a href="#">
+              <a href="https://space-trip.herokuapp.com/">
                 <img src="images/image4.jpg"></br></br>
                 Space Trip
               </a>
@@ -68,7 +68,7 @@
             <div class="square">
               <a href="#">
                 <img src="images/image3.jpg"></br></br>
-                Universal
+                Coming soon
               </a>
             </div>
           </li>
@@ -76,7 +76,7 @@
             <div class="square">
               <a href="#">
                 <img src="images/image1.jpg"></br></br>
-                Virtual Styer
+                Coming soon
               </a>
             </div>
           </li>
@@ -85,7 +85,7 @@
             <div class="square">
               <a href="#">
                 <img src="images/image4.jpg"></br></br>
-                Space Trip
+                Coming soon
               </a>
             </div>
           </li>
@@ -94,7 +94,7 @@
             <div class="square">
               <a href="#">
                 <img src="images/image3.jpg"></br></br>
-                Universal
+                Coming soon
               </a>
             </div>
           </li>
