--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
           <li>
             <div class="square">
               <a href="https://www.virtual-styler.me">
-                <img src="images/image1.jpg"></br></br>
+                <img src="images/virtual-styler-mockup.jpg"></br></br>
                 Virtual Styler</a>
             </div>
           </li>
@@ -58,7 +58,7 @@
           <li>
             <div class="square">
               <a href="https://space-trip.herokuapp.com/">
-                <img src="images/image4.jpg"></br></br>
+                <img src="images/space-trip-mockup.jpg"></br></br>
                 Space Trip
               </a>
             </div>
